# SciFin

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  VERSIONS.md  __init__.py  coding_templates.txt  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python_test.yml
docs/: coding_templates.md  coding_templates.txt  writing_recommendations.txt
examples/classifier/: CL1_compute_dtw_distance.py  CL2_apply_correlation_based_kmeans_clustering.py  CL3_apply_correlation_based_kmeans_advanced_clustering.py  CL4_apply_DTW_based_kmeans_clustering.py  CL5_do_DTW_based_clustering_with_multiprocessing.py
examples/timeseries/: TS10_compute_drawdowns.py  TS1_build_timeseries_from_csv.py  TS2_plot_timeseries_distribution_and_density.py  TS3_multiplot_and_rolling_average.py  TS4_produce_lag_plots.py  TS5_compute_autocorrelation.py  TS6_decompose_timeseries.py  TS7_convolve_timeseries.py  TS8_apply_gaussian_process.py  TS9_create_cattimeseries_from_timeseries.py
fouriertrf/: fouriertrf.py
geneticalg/: geneticalg.py
marketdata/: marketdata.py  simuldata.py
scifin/: __init__.py
statistics/: distributions.py  statistics.py
tests/: Pattern_DistributionClass.txt  Test_for_Jiro.py  __init__.py  test_classifier.py  test_fouriertrf.py  test_geneticalg.py  test_marketdata.py  test_marketdata_simuldata.py  test_montecarlo.py  test_neuralnets.py  test_scifin.py  test_statistics.py  test_statistics_distributions.py  test_timeseries.py  test_timeseries_randomseries.py  test_version.ipynb
timeseries/: randomseries.py  timeseries.py
(+33 files in other folders)
